<resources>
    <string name="label_must_fill">Required.</string>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_note">DetailNoteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Title</string>
    <string name="create_at_april_7_1_2020">Create At April.7.1.2020</string>
    <string name="l">|</string>
    <string name="_201">201</string>
    <string name="character">character</string>
    <string name="updste_at_april_7_1_2020">Updste at April.7.1.2020</string>
    <string name="add_category">Add Category</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="available">Features not yet available</string>
    <string name="available_category">The feature is not yet available, use the features above first</string>
    <string name="add_ctegory">Add Ctegory</string>
    <string name="loading">Loading...</string>
    <string name="favorite">favorite</string>
    <string name="todo3">TODO</string>
    <string name="my_edit_profile">Edit Profile</string>
    <string name="account">Account</string>
    <string name="delete_the_category">Do you want to delete the category</string>
    <string name="name_empty">Name Empty</string>
    <string name="save">Save</string>
    <string name="name_is_empty">Name is Empty</string>
    <string name="login">Login</string>
    <string name="phone_email">Phone/Email</string>
    <string name="password">Password</string>
    <string name="empty_username">Username cannot be empty</string>
    <string name="nothing">Nothing has changed</string>
    <string name="compressing">Wait while compressing the photo</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="email_empty">Email Empty</string>
    <string name="phone">Phone</string>
    <string name="phone_empty">Phone Empty</string>
    <string name="register_failed">Register Failed...</string>
    <string name="please_wait_register">Please Wait Register...</string>
    <string name="setting">Setting</string>
    <string name="biometric_auth">Biometric Auth</string>
    <string name="biometric_authentication_refers_to_a_cybersecurity_process_that_verifies_a_user_s_identity_using_their_unique_biological_traits_such_as_fingerprints_voices_retinas_and_facial_features">Biometric authentication refers to a cybersecurity process that verifies a user\'s identity using their unique biological traits such as fingerprints, voices, retinas, and facial features.</string>
    <string name="drak_mode">Drak Mode</string>
    <string name="dark_mode_or_dark_mode_itself_as_a_feature_to_replace_a_lighter_background_with_a_darker_one_and_can_protect_your_eyes_from_radiation">Dark mode or dark mode itself as a feature to replace a lighter background with a darker one and can protect your eyes from radiation.</string>
    <string name="you_can_change_your_password_if_you_forget_it_this_application_will_keep_your_password_secure">You can change your password if you forget it, this application will keep your password secure.</string>
    <string name="logout_account">Logout Account</string>
    <string name="exit_process_to_cut_off_access_to_certain_computer_systems_or_services_and_may_delete_your_data">Exit process to cut off access to certain computer systems or services and may delete your data.</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="password_must_be_8_characters">*Password must be 8 characters</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="password_didn_t_match">Password didn\'t match</string>
    <string name="have_an_account">Have an account?</string>
    <string name="forget">Forget?</string>
    <string name="login_white_biometrik">Login White Biometrik</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="an_application_that_users_use_to_create_and_store_personal_notes_and_or_picture_notes">An application that users use to create and store personal notes, and or picture notes.</string>
    <string name="enter">Enter</string>
    <string name="add_new_name_category">Add New Name Category</string>
    <string name="password_new">Password New</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search">Search</string>
    <string name="file_category_is_empty">File Category Is Empty</string>
    <string name="file_note_favourite_is_empty">File Note Favourite Is Empty</string>
    <string name="file_note_is_empty">File Note Is Empty</string>
    <string name="category">Category</string>
    <string name="category_category">Category category</string>
    <string name="body_body">Body Body</string>
    <string name="do_you_want_to_delete_note">Do you Want To Delete Note?</string>
    <string name="cancle">Cancle</string>
    <string name="delete">Delete</string>
    <string name="edit_category">Edit Category</string>
    <string name="do_you_want_logout">Do you Want Logout?</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
</resources>