<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        tools:context=".ui.login.LoginActivity">


        <ImageView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:alpha="0.3"
            android:contentDescription="@string/todo3"
            android:src="@drawable/ic_note_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.432" />

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_90sdp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="@dimen/_27sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:fontFamily="@font/poppinsbold"
                android:gravity="start"
                android:text="@string/phone_email"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email_or_phone_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:fontFamily="@font/poppinsmedium"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_180sdp"
                android:fontFamily="@font/poppinsbold"
                android:gravity="start"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_email_or_phone_login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:gravity="start"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:passwordToggleEnabled="true">


                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:background="@color/transparent"
                    android:fontFamily="@font/poppinsmedium"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_3sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp"
                    tools:ignore="LabelFor,RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/must_character"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="start"
                    android:text="@string/password_must_be_8_characters"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/forget_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:fontFamily="@font/poppinsmedium"
                    android:foreground="?selectableItemBackground"
                    android:gravity="start"
                    android:text="@string/forget"
                    android:textColor="@color/blue40"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>


            <TextView
                android:id="@+id/btn_login"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/custom_buttom"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                tools:ignore="RtlSymmetry,TextViewEdits" />

            <TextView
                android:id="@+id/btn_biometrik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppinsmedium"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:text="@string/login_white_biometrik"
                android:textColor="@color/blue40"
                android:textSize="@dimen/_11sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_70sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_have_an_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppinsmedium"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/poppinsmedium"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/sign_up"
                    android:textColor="@color/blue40"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.432" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>